kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Drive-and-deliver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-http2: "true"  
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  rules:
  - host: your-app-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service  
            port:
              number: 8080
